--- a/index.html
+++ b/index.html
@@ -12,48 +12,8 @@
             <br/><br/><br/>
 
             <div class="row">
-                <div class="col-sm-6">
-                    <form class="form-horizontal" ng-submit="addToLib()">
-                        <div class="form-group">
-                            <label for="inputEmail3" class="col-sm-2 control-label">Title</label>
-
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="title" id="inputEmail3"
-                                       placeholder="Title">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="inputPassword3" class="col-sm-2 control-label">Author</label>
-
-                            <div class="col-sm-10">
-                                <input type="text" ng-model="author" class="form-control" id="inputPassword3"
-                                       placeholder="Author name">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-success">Save</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-sm-6">
-                    <table class="table table-bordered">
-                        <tr>
-                            <th>S.N</th>
-                            <th>Title</th>
-                            <th>Author</th>
-                            <th>Actions</th>
-                        </tr>
-                        <tr ng-repeat="lib in libArra">
-                            <td>{{lib.sn}}</td>
-                            <td>{{lib.title}}</td>
-                            <td>{{lib.author}}</td>
-                            <td>{{lib.done}}</td>
-                        </tr>
-                    </table>
-                </div>
+                <div ng-view></div>
+                <div ng-include='"partials/footer.html"'></div>
             </div>
         </div>
         <script src="assets/bower_components/angular/angular.min.js"></script>
