--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
         <div class="container" ng-controller="libCtrl">
             <br/><br/><br/>
 
-            <div class="row">
-                <div ng-view></div>
-                <div ng-include='"partials/footer.html"'></div>
+            <div class="row" >
+                <div ng-view class="col-sm-5"></div>
+                <div class="col-sm-5 col-sm-offset-6" ng-include='"partials/directory.html"'></div>
             </div>
         </div>
         <script src="assets/bower_components/angular/angular.min.js"></script>
+        <script src="assets/bower_components/angular-route/angular-route.min.js"></script>
         <script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
         <script src="assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="app/app.module.js"></script>
+        <script src="app/app.routes.js"></script>
+        <script src="app/service.js"></script>
+        <script src="app/library/BooksController.js"></script>
     </body>
 </html>
