--- a/controller.html
+++ b/controller.html
@@ -20,12 +20,13 @@
             </div>
 
             <div class="row col-lg-4" ng-controller="myCtrl">
-                <ul class="list-group">
+                <div class="error">{{error}}</div>
+                <ul class="list-group" ng-hide="person | isEmpty">
                     <li class="list-group-item active" > Serial </li>
-                    <li class="list-group-item" >{{person.name}}</li>
-                    <!--<li class="list-group-item"><img src="{{person.location}}" alt=""></li>-->
-                    <li class="list-group-item">{{person.location}}</li>
-                    <li class="list-group-item btn"><a href="{{person.url}}" style="padding: 0px; margin: 0px;" class="btn btn-block">Edit</a></li>
+                    <li class="list-group-item" >{{ person.login}}</li>
+                    <li class="list-group-item"><img ng-src="{{person.avatar_url}}" alt="{{person.login}}" title="{{person.login}}" width="100" height="100"></li>
+                    <li class="list-group-item">{{ person.location}}</li>
+                    <!--<li class="list-group-item btn"><a href="{{ person.url}}" style="padding: 0px; margin: 0px;" class="btn btn-block">Edit</a></li>-->
                 </ul>
             </div>
 
