--- a/controller.html
+++ b/controller.html
@@ -19,17 +19,52 @@
 
             </div>
 
-            <div class="row col-lg-4" ng-controller="myCtrl">
-                <div class="error">{{error}}</div>
-                <ul class="list-group" ng-hide="person | isEmpty">
-                    <li class="list-group-item active" > Serial </li>
-                    <li class="list-group-item" >{{ person.login}}</li>
-                    <li class="list-group-item"><img ng-src="{{person.avatar_url}}" alt="{{person.login}}" title="{{person.login}}" width="100" height="100"></li>
-                    <li class="list-group-item">{{ person.location}}</li>
-                    <!--<li class="list-group-item btn"><a href="{{ person.url}}" style="padding: 0px; margin: 0px;" class="btn btn-block">Edit</a></li>-->
-                </ul>
-            </div>
 
+            <div class="row " ng-controller="myCtrl">
+                <div class="col-sm-4">
+                    <form name="name" ng-submit="search(username)">
+                        <div class="form-group" ng-click="success(username)">
+                            <label>Git Username: </label>
+                            <input type="search" class="form-control" name="search" ng-model="username"/>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" id="submit" value="Search" class="btn btn-sm btn-info" />
+                        </div>
+
+                    </form>
+                    <br>
+                    <br>
+                    <div class="error" ng-hide="error | isEmpty"></div>
+                    <ul class="list-group" ng-hide="person | isEmpty">
+                        <li class="list-group-item active" ng-hide="person | isEmpty"> Serial </li>
+                        <li class="list-group-item"ng-hide="person | isEmpty" >Name: {{ person.login}}</li>
+                        <li class="list-group-item" ng-hide="person | isEmpty"><img ng-src="{{person.avatar_url}}" alt="{{person.login}}" title="{{person.login}}" width="100" height="100"></li>
+                        <li class="list-group-item" ng-hide="person | isEmpty">Location: {{ person.location}}</li>
+                        <!--<li class="list-group-item btn"><a href="{{ person.url}}" style="padding: 0px; margin: 0px;" class="btn btn-block">Edit</a></li>-->
+                    </ul>
+                </div>
+                <div class="col-sm-8">
+
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <td>Name</td>
+                                <td>Stars</td>
+                                <td>Language</td>
+                                <td>Description</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="repo in repos">
+                                <td><a ng-href="{{repo.html_url}}" target="_blank">{{repo.name}}</a></td>
+                                <td>{{repo.size}}</td>
+                                <td>{{repo.language}}</td>
+                                <td>{{repo.description}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
 
         </div><!-- /.container -->
         <div class="container" ng-include='"partials/footer.html"'>
