--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
         <meta charset="UTF-8">
         <title>Create library</title>
         <link rel="stylesheet" href="assets/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
-
     </head>
     <body ng-app="libApp">
-
+        <div class="container">
+            <nav class="navbar navbar-inverse " ng-include='"partials/navigation.html"'>  </nav>
+        </div>
         <div class="container" ng-controller="libCtrl">
-            <br/><br/><br/>
-
             <div class="row" >
                 <div ng-view class="col-sm-12"></div>
             </div>
