[ADD][MOD] add formsController and modify forms.html layout and functionality

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
             <nav class="navbar navbar-inverse " ng-include='"partials/navigation.html"'>  </nav>
         </div>
         <div class="container" ng-controller="libCtrl">
-            <div class="row" >
-                <div ng-view class="col-sm-12"></div>
-            </div>
-            <hr />
+            <div class="row starter-template col-sm-12" ></div>
+
+
+
+
             <div class="row" >
                 <div class="col-sm-12" ng-include='"partials/lists.html"'></div>
             </div>
