[ADD] Change on project structure

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                 <div class="col-sm-12" ng-include='"partials/lists.html"'></div>
             </div>
         </div>
+        <div>
+            <div class="slide-animate-container">
+                <div class="slide-animate" ng-include="'partials/blog.html'"></div>
+            </div>
+        </div>
         <script src="assets/bower_components/angular/angular.min.js"></script>
         <script src="assets/bower_components/angular-route/angular-route.min.js"></script>
         <script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
@@ -27,5 +32,6 @@
         <script src="app/app.routes.js"></script>
         <script src="app/service.js"></script>
         <script src="app/library/BooksController.js"></script>
+        <script src="app/modules/posts/postModule.js"></script>
     </body>
 </html>
