--- a/index.html
+++ b/index.html
@@ -4,26 +4,6 @@
         <meta charset="UTF-8">
         <title>Create library</title>
         <link rel="stylesheet" href="assets/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
-    </head>
-    <body ng-app="libApp">
-        <div class="container">
-            <nav class="navbar navbar-inverse " ng-include='"partials/navigation.html"'>  </nav>
-        </div>
-        <div class="container" ng-controller="libCtrl">
-            <div class="row starter-template col-sm-12" ></div>
-
-
-
-
-            <div class="row" >
-                <div class="col-sm-12" ng-include='"partials/lists.html"'></div>
-            </div>
-        </div>
-        <div>
-            <div class="slide-animate-container">
-                <div class="slide-animate" ng-include="'partials/blog.html'"></div>
-            </div>
-        </div>
         <script src="assets/bower_components/angular/angular.min.js"></script>
         <script src="assets/bower_components/angular-route/angular-route.min.js"></script>
         <script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
@@ -33,5 +13,19 @@
         <script src="app/service.js"></script>
         <script src="app/library/BooksController.js"></script>
         <script src="app/modules/posts/postModule.js"></script>
+    </head>
+    <body ng-app="">
+        <div class="container">
+            <nav class="navbar navbar-inverse " ng-include='"partials/navigation.html"'>  </nav>
+        </div>
+
+        <!--<div class="container" ng-controller="libCtrl">-->
+            <!--<div class="row starter-template col-sm-12" ></div>-->
+        <!--</div>-->
+
+        <!--load all angularJS template-->
+        <div class="ng-view"></div>
+
+
     </body>
 </html>
