[MOD] Change on forms

--- a/forms.html
+++ b/forms.html
@@ -61,6 +61,11 @@
                         </select>
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="col-sm-2 col-sm-offset-2">
+                            <input type="submit" name="save" value="Save" class="btn btn-success"/>
+                    </div>
+                </div>
             </form>
 
             <div class="container" ng-include='"partials/footer.html"'></div>
