--- a/forms.html
+++ b/forms.html
@@ -1,74 +1,101 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Create library</title>
-        <link rel="stylesheet" href="assets/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="assets/css/style.css"/>
+<head>
+    <meta charset="UTF-8">
+    <title>Create library</title>
+    <link rel="stylesheet" href="assets/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
 
-        <script src="assets/bower_components/angular/angular.min.js"></script>
-        <script src="assets/bower_components/angular-route/angular-route.min.js"></script>
-        <script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
-        <script src="assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="app/controller/formsController.js"></script>
+    <script src="assets/bower_components/angular/angular.min.js"></script>
+    <script src="assets/bower_components/angular-route/angular-route.min.js"></script>
+    <script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="app/controller/formsController.js"></script>
+    <style>
+        .error-message {
+            color: red;
+        }
 
-    </head>
-    <body ng-app="myApp">
-        <div class="container">
-            <nav class="navbar navbar-inverse" ng-include='"partials/navigation.html"'>  </nav>
-        </div>
-        <div class="container" ng-controller="UserController">
-            <div class="row starter-template col-sm-12" ></div>
+        input.ng-dirty.ng-invalid {
+            border-color: red;
+        }
+    </style>
 
-            <form class="form-horizontal" name="myform" novalidate>
-                <div class="form-group">
-                    <label id="firstname" class="col-sm-2 control-label">First Name:</label>
+</head>
+<body ng-app="myApp">
+<div class="container">
+    <nav class="navbar navbar-inverse" ng-include='"partials/navigation.html"'></nav>
+</div>
+<div class="container" ng-controller="UserController">
+    <div class="row starter-template col-sm-12"></div>
+    <div class="col-sm-6">
+        <form class="form-horizontal" name="myform" ng-submit="saveUser()" novalidate>
+            <div class="form-group">
+                <label id="firstname" class="col-sm-4 control-label">First Name:</label>
 
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="user.firstname" id="firstname"
-                               placeholder="First Name" ng-required="true" ng-minlength="2" >
-                    </div>
-                    <span class="error-message col-md-offset-2 col-md-6" ng-show="myform.firstname.$dirty
-                                            && myform.firstname.$error.required">The First Name is Mandatory
-                    </span>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" ng-model="user.firstName" id="firstName"
+                           placeholder="First Name" ng-required="true" ng-minlength="2">
                 </div>
-                <div class="form-group">
-                    <label id="lastName" class="col-sm-2 control-label">Last Name:</label>
+                <br>
+                <span class="error-message" ng-show="myform.firstName.$dirty">
+                        This field is mandatory
+                </span>
+                <span class="error-message" ng-show="myform.firstName.$dirty && myform.firstName.$error.minlength">
+                        The First Name should be minimum 2 characters
+                </span>
+            </div>
+            <div class="form-group">
+                <label id="lastName" class="col-sm-4 control-label">Last Name:</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" ng-model="user.lastName" id="lastName"
+                           placeholder="Last Name" ng-required="true" ng-minlength="2">
+                </div>
+            </div>
+            <div class="form-group">
+                <label id="phoneNumber" class="col-sm-4 control-label">Phone Number:</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" ng-model="user.phoneNumber" id="phoneNumber">
+                </div>
+            </div>
+            <div class="form-group">
+                <label id="selectGroup" class="col-sm-4 control-label">Country:</label>
+                <div class="col-sm-8">
+                    <select name="country" ng-model="user.country" class="form-control"
+                            ng-options="country.id as country.desc for country in countries">
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-4 col-sm-4 ">
+                    <input type="submit" name="save" value="Save" class="btn btn-success"/>
+                </div>
+            </div>
+        </form>
+    </div>
 
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="user.lastname" id="lastName"
-                               placeholder="Last Name" ng-required="true" ng-minlength="2" >
-                    </div>
-                    <span class="error-message  col-md-offset-2 col-md-6" ng-show="myform.lastname.$dirty
-                                            && myform.lastname.$error.required">The Last Name is Mandatory
-                    </span>
-                </div>
-                <div class="form-group">
-                    <label id="phoneNumber" class="col-sm-2 control-label">Phone Number:</label>
+    <div class="col-sm-6">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Phone No</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="user in users">
+                    <td>{{$index+1}}</td>
+                    <td>{{user.firstName}} {{user.lastName}}</td>
+                    <td>{{user.phoneNumber}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="col-sm-12">
+        <div class="container" ng-include='"partials/footer.html"'></div>
+    </div>
 
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="user.phoneNumber" id="phoneNumber"
-                               ng-maxlength="10" ng-minlength="10" ng-pattern="/^\d{10}$/" >
-                    </div>
-                    <span class="error-message  col-md-offset-2 col-md-6" ng-show="myform.phoneNumber.$dirty
-                                            && myform.phoneNumber.$invalid">The phone number field should be
-                        of 10 digits</span>
-                </div>
-                <div class="form-group">
-                    <label id="selectGroup" class="col-sm-2 control-label">Select Group:</label>
-                    <div class="col-sm-2">
-                        <select name="country" ng-model="user.country" class="form-control" ng-options="country.id as country.desc for country in countries">
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-2 col-sm-offset-2">
-                            <input type="submit" name="save" value="Save" class="btn btn-success"/>
-                    </div>
-                </div>
-            </form>
-
-            <div class="container" ng-include='"partials/footer.html"'></div>
-        </div>
-    </body>
+</div>
+</body>
 </html>
