[MOD] Change on git

--- a/forms.html
+++ b/forms.html
@@ -74,6 +74,7 @@
         </form>
     </div>
 
+    <!-- user lists-->
     <div class="col-sm-6">
         <table class="table table-striped">
             <thead>
