[MOD] Change on forms controller in angularJS

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!--<script src="app/service.js"></script>-->
         <!--<script src="app/library/BooksController.js"></script>-->
         <script src="app/modules/posts/postModule.js"></script>
+        <!--<base href="/" />-->
     </head>
     <body ng-app="postModule" >
         <div class="container">
